--- a/html/servicios.html
+++ b/html/servicios.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- SEO -->
     <title>Nuestros Servicios SEO | Amarellus SEO</title>
     <meta name="description"
@@ -104,7 +105,7 @@
             <section class="services-section">
                 <div class="services-container">
                     <div class="services-column">
-                        <h2>Descubre Nuestra Metodología SEO</h2>
+                        <h2>Descubre Nuestra Metodología SEO</h2> 
                     </div>
                     <div class="services-column">
                         <ol>
@@ -310,6 +311,9 @@
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
                     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
                     crossorigin="anonymous"></script>
+                    <script>
+                        AOS.init();
+                      </script>
 </body>
 
 </html>
