--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- SEO -->
     <title>Amarellus | SEO LAB</title>
@@ -46,17 +47,18 @@
             </div>
             <input type="checkbox" id="menu-toggle" class="menu-toggle" />
             <div class="hamburger" id="hamburger">
-                <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
+                <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
             </div>
             <nav class="nav">
                 <label for="menu-toggle" class="cerrar">Cerrar</label>
                 <ul id="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="html/servicios.html">Servicios</a></li>
-                    <li><a href="html/nosotros.html">Nosotros</a></li>
-                    <li><a href="html/blog.html">Blog</a></li>
-                    <li><a href="html/contacto.html">Contacto</a></li>
-                </ul>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="html/servicios.html">Servicios</a></li>
+                        <li><a href="html/nosotros.html">Nosotros</a></li>
+                        <li><a href="html/blog.html">Blog</a></li>
+                        <li><a href="html/contacto.html">Contacto</a></li>
+                    </ul>
             </nav>
         </div>
     </header>
@@ -77,7 +79,7 @@
 
             <div class="content container">
                 <div class="text-box">
-                    <h2 class="h2-seo-lab">SEO LAB</h2>
+                    <h2 class="h2-seo-lab" data-aos="fade-down">SEO LAB</h2>
                     <p class="p1">En Amarellus SEO LAB, nos apasiona ayudar a negocios como el tuyo a crecer y
                         destacar en el
                         mundo digital. Nuestro equipo de <strong>expertos en SEO</strong> está aquí para llevar tu
@@ -110,7 +112,7 @@
     <main>
         <section>
             <div class="marcas">
-                <h3 class="marcas">Marcas que Confían en Nosotros</h3>
+                <h3 class="marcas" data-aos="fade-down">Marcas que Confían en Nosotros</h3>
             </div>
             <div class="clients-bar">
 
@@ -126,45 +128,45 @@
     <main>
         <section>
             <div class="gallery">
-                <h2 class="servicios-home">Nuestros Servicios</h2>
+                <h2 class="servicios-home" data-aos="fade-down">Nuestros Servicios</h2>
 
                 <div class="grid-container">
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 1.png" alt="Auditoría SEO">
                         <h3 class="on-page">SEO On Page</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 2.png" alt="seo on page">
                         <h3 class="audit">Auditoría SEO</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 3.png" alt="seo content">
                         <h3 class="seo-content">SEO Content</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 4.png" alt="seo off page">
                         <h3 class="off-page">SEO Off Page</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 5.png" alt="seo tecnico">
                         <h3 class="tecnico">SEO Técnico</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="imgs/servicios 6.png" alt="local seo">
                         <h3 class="local">SEO Local</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -177,7 +179,7 @@
     </main>
     <!--section 4-->
     <section class="reviews">
-        <h2 class="reviews-title">Lo que dicen nuestros clientes</h2>
+        <h2 class="reviews-title" data-aos="fade-down">Lo que dicen nuestros clientes</h2>
         <div id="reviewsCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -259,7 +261,7 @@
 
     <main>
         <section>
-            <h2 class="encuentranos">Encuéntranos</h2>
+            <h2 class="encuentranos" data-aos="fade-down">Encuéntranos</h2>
             <div class="mapouter">
                 <div class="gmap_canvas">
                     <iframe id="gmap_canvas"
@@ -277,7 +279,7 @@
 
             <body>
                 <div class="wrapper">
-                    <div class="h2">
+                    <div class="h2" data-aos="zoom-in">
                         <h2>HOLA ¡HABLEMOS!</h2>
                     </div>
                     <div class="form-register">
@@ -306,7 +308,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="footer-bottom"> 
+        <div class="footer-bottom">
             <div class="social-media">
                 <a href="https://facebook.com" target="_blank">Facebook</a>
                 <a href="https://twitter.com" target="_blank">Twitter</a>
@@ -314,8 +316,8 @@
                 <a href="https://linkedin.com" target="_blank">LinkedIn</a>
             </div>
             <div class="copyright">
-            <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-            <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+                <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
