--- a/html/servicios.html
+++ b/html/servicios.html
@@ -105,7 +105,7 @@
             <section class="services-section">
                 <div class="services-container">
                     <div class="services-column">
-                        <h2>Descubre Nuestra Metodología SEO</h2> 
+                        <h2>Descubre Nuestra Metodología SEO</h2>
                     </div>
                     <div class="services-column">
                         <ol>
@@ -127,40 +127,42 @@
                 <h2>Mejora tu Posicionamiento Web</h2>
                 <div><a href="#" class="cta-button">¡Hablemos!</a></div>
                 <div class="grid-container">
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="../imgs/rendimiento.png" alt="rendimiento" class="service-image">
                         <h3>Rankea Más</h3>
                         <p>En el SEO Lab te ayudamos a alcanzar las primeras posiciones en los motores de búsqueda,
                             mejorando tu visibilidad y atrayendo más clientes potenciales.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="../imgs/trafico.png" alt="trafico" class="service-image">
                         <h3>Mejora tu Tráfico</h3>
                         <p>En Amarellus SEO LAB incrementamos el tráfico orgánico de tu sitio web mediante estrategias
                             SEO efectivas, asegurando un flujo constante de visitantes cualificados.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="../imgs/ux.png" alt="user experience" class="service-image">
                         <h3>User Experience</h3>
                         <p>Optimiza la experiencia del usuario con nosotros. En el SEO Lab mejoramos la navegación y
                             usabilidad de tu sitio web para que tus visitantes disfruten cada interacción.</p>
                     </div>
-                    <div class="grid-item">
+                    <div class="grid-item" data-aos="zoom-in">
                         <img src="../imgs/1434090.png" alt="rapidez" class="service-image">
                         <h3>Mejora la Rapidez</h3>
                         <p>La velocidad de tu sitio web es crucial. En Amarellus SEO LAB optimizamos el tiempo de carga
                             para ofrecer una experiencia rápida y eficiente, reduciendo la tasa de rebote.</p>
                     </div>
-                    <div class="grid-item">
-                        <img src="../imgs/png-transparent-computer-icons-geo-fence-gps-navigation-systems-environment-icon-heart-share-icon-gps-navigation-systems.png" alt="rapidez" class="service-image">
+                    <div class="grid-item" data-aos="zoom-in">
+                        <img src="../imgs/png-transparent-computer-icons-geo-fence-gps-navigation-systems-environment-icon-heart-share-icon-gps-navigation-systems.png"
+                            alt="rapidez" class="service-image">
                         <h3>Posiciona Localmente</h3>
                         <p>En Amarellus SEO LAB, potenciamos tu visibilidad local con estrategias de SEO específicas
                             para que tu negocio destaque en las búsquedas de tu área. Optimizamos tu presencia en Google
                             My Business y mejoramos el contenido local para atraer a clientes potenciales cerca de ti.
                         </p>
                     </div>
-                    <div class="grid-item">
-                        <img src="../imgs/png-transparent-computer-icons-content-vision-and-mission-angle-text-rectangle.png" alt="rapidez" class="service-image">
+                    <div class="grid-item" data-aos="zoom-in">
+                        <img src="../imgs/png-transparent-computer-icons-content-vision-and-mission-angle-text-rectangle.png"
+                            alt="rapidez" class="service-image">
                         <h3>Contenido que Enamora</h3>
                         <p>Nuestro contenido va más allá de informar; está diseñado para cautivar y conectar. Cada pieza
                             que creamos está pensada para resonar profundamente con tu audiencia y dejar una impresión
@@ -181,11 +183,11 @@
                                 técnicos, contenido y enlaces, proporcionando un informe detallado con recomendaciones
                                 personalizadas para optimizar tu estrategia SEO.</p>
                         </div>
-                        <div class="services-image">
+                        <div class="services-image" data-aos="flip-right">
                             <img src="../imgs/como realizar SEO.webp" alt="Servicio 1">
                         </div>
                     </div>
-                    <div class="services-item">
+                    <div class="services-item" data-aos="flip-left">
                         <div class="services-image">
                             <img src="../imgs/Cover-Seo-on-page-Alicia-Welow.jpg" alt="Servicio 2">
                         </div>
@@ -206,11 +208,11 @@
                                 My Business, obteniendo reseñas positivas y asegurando que tu negocio sea fácilmente
                                 encontrado por clientes cercanos que buscan tus servicios.</p>
                         </div>
-                        <div class="services-image">
+                        <div class="services-image" data-aos="flip-right">
                             <img src="../imgs/photo-1548345680-f5475ea5df84.avif" alt="Servicio 3">
                         </div>
                     </div>
-                    <div class="services-item">
+                    <div class="services-item"data-aos="flip-left">
                         <div class="services-image">
                             <img src="../imgs/seo tecnico.webp" alt="Servicio 4">
                         </div>
@@ -232,11 +234,11 @@
                                 aseguramos de que tu contenido no solo sea relevante y valioso, sino también
                                 perfectamente optimizado para los motores de búsqueda.</p>
                         </div>
-                        <div class="services-image">
+                        <div class="services-image"data-aos="flip-right">
                             <img src="../imgs/seo content.webp" alt="Servicio 5">
                         </div>
                     </div>
-                    <div class="services-item">
+                    <div class="services-item" data-aos="flip-left">
                         <div class="services-image">
                             <img src="../imgs/guia-linkbuilding-2023.jpg" alt="Servicio 6">
                         </div>
@@ -258,7 +260,7 @@
             <main>
                 <section class="contenedor-forms">
                     <div class="wrapper">
-                        <div class="h2">
+                        <div class="h2" data-aos="zoom-in">
                             <h2>HOLA ¡HABLEMOS!</h2>
                         </div>
                         <div class="form-register">
@@ -311,9 +313,10 @@
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
                     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
                     crossorigin="anonymous"></script>
-                    <script>
-                        AOS.init();
-                      </script>
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script>
+                    AOS.init();
+                </script>
 </body>
 
 </html>
